# SleepGuard

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
installer/: README.md
installer/linux/: install-guard.sh  sleepguard-guard.service  sleepguard-monitor.service
installer/windows/: register-guard.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: lib.rs
src-tauri/crates/guard/: Cargo.toml
src-tauri/crates/guard/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: boot_guard.rs  lib.rs  main.rs  monitor_autostart.rs
src/screens/: Advanced.tsx  Lockscreen.tsx  Main.tsx  Onboarding.tsx
src/utils/: bootGuard.ts  time.ts
