[workspace]
members = [".", "crates/core", "crates/guard"]
resolver = "2"

[package]
name = "sleepguard-app"
version = "1.0.0"
description = "SleepGuard desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "sleepguard_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.45"
dirs = "6"
sleepguard-core = { path = "crates/core" }
